huge website update 20th frb

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,10 +17,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), sans-serif;/* Now using Poppins */
 }
 
 html {
   scroll-behavior: smooth;
 }
-
